--- a/templates/_formMessages.html.twig
+++ b/templates/_formMessages.html.twig
@@ -2,22 +2,22 @@
     <div class="col-md-4">
         <input type="hidden" name="nosiar">
         <div class="form-group">
-            <input type="text" class="form-control" name="name" placeholder="Nom" required>
+            <input type="text" class="form-control rounded-0" name="name" placeholder="Nom" required>
         </div>
         <div class="form-group">
-            <input type="email" class="form-control" name="email" placeholder="Email" required>
+            <input type="email" class="form-control rounded-0" name="email" placeholder="Email" required>
         </div>
         <div class="form-group">
-            <input type="tel" class="form-control" name="phone" placeholder="Téléphone" required>
+            <input type="tel" class="form-control rounded-0" name="phone" placeholder="Téléphone" required>
         </div>                        
     </div>
     <div class="col-md-8">
         <div class="form-group">
-            <input type="text" class="form-control" name="subject" placeholder="Objet de votre message" required>
+            <input type="text" class="form-control rounded-0" name="subject" placeholder="Objet de votre message" required>
         </div>
         <div class="form-group">
-            <textarea class="form-control" name="message" placeholder="Écrivez votre message ici" required></textarea>
+            <textarea class="form-control rounded-0" name="message" placeholder="Écrivez votre message ici" required></textarea>
         </div>
-        <button type="submit" class="btn btn-light">Envoyer</button>              
+        <button type="submit" class="btn btn-default float-right rounded-0">Envoyer</button>              
     </div>
 </form>  
