--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,9 @@
     </head>
     <body>
 
+
+    <div class="container">
+    
         <header>
 
             <div class="container">
@@ -57,7 +60,7 @@
 
                     <div class="fixed-top" id="burgerAndBannerWrapper">
                     
-                        <button class="navbar-toggler p-3 border mt-3 mx-5" type="button" data-toggle="offcanvas">
+                        <button class="navbar-toggler p-2 border my-2 mx-2" type="button" data-toggle="offcanvas">
                             <span class="navbar-toggler-icon"></span>
                         </button>   
                         <img id="logoMobile" src="{{ asset('images/icones/logo_mobile.png' ) }}" alt="">
@@ -78,7 +81,7 @@
                                     {% set dropDownButtonText = link.content  %}
 
                                 <li id="lastDesktop" class="nav-item d-none">
-                                    <a class="nav-link" 
+                                    <a class="nav-link px-2" 
                                     href="{{ link.url }}" 
                                     title="{{ link.title }}" 
                                     target="{{ (link.type == "external") ? '_blank' : '_self' }}" >
@@ -86,10 +89,16 @@
                                     </a> 
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{ link.content }}</a>
+                                    <a class="nav-link dropdown-toggle px-2" 
+                                        data-toggle="dropdown" 
+                                        href="#" role="button" 
+                                        aria-haspopup="true" 
+                                        aria-expanded="false">
+                                        {{ link.content }}
+                                    </a>
                                     <div class="dropdown-menu" aria-labelledby="dropdown01">
                                         {% for link in links()|filter( link => link.position == 'dropdown' )|sort((a, b) => a.positionOrder <=> b.positionOrder) %}
-                                            <a class="dropdown-item" 
+                                            <a class="dropdown-item px-2" 
                                                 href="{{ link.url }}" 
                                                 title="{{ link.title }}" 
                                                 target="{{ (link.type == "external") ? '_blank' : '_self' }}" >
@@ -100,7 +109,7 @@
                                 </li>
                                 {% else %}
                                 <li class="nav-item">
-                                    <a class="nav-link" 
+                                    <a class="nav-link px-2" 
                                     href="{{ link.url }}" 
                                     title="{{ link.title }}" 
                                     target="{{ (link.type == "external") ? '_blank' : '_self' }}" >
@@ -115,9 +124,10 @@
                             {# Boucle sur liens header #}
                             {% for link in links()|filter( link => link.position == 'header' )|sort((a, b) => a.positionOrder <=> b.positionOrder) %}
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{{ link.url }}" 
-                                    title="{{ link.title }}"
-                                    target="{{ (link.type == "external") ? '_blank' : '_self' }}">
+                                    <a class="nav-link px-2" 
+                                        href="{{ link.url }}" 
+                                        title="{{ link.title }}"
+                                        target="{{ (link.type == "external") ? '_blank' : '_self' }}">
                                         {{ link.content }}
                                     </a>
                                 </li>        
@@ -133,6 +143,10 @@
 
         </header>
     
+        <span id="scrollChrevron" class="p-2 m-0 border rounded" title="Aller vers le haut de la page">
+            <i class="fa fa-chevron-up"></i>
+        </span>        
+
 
 
         <main>
@@ -155,20 +169,22 @@
         <footer class="border-top"> 
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3">
-                        <h4>Une question ? Une idée ?</h4>
+                    <div class="col-md-3 my-5">
+                        <h4 class="mb-4 red font-weight-bold">Une question ? Une idée ?</h4>
                         <div class="row">
-                            <div class="col-4 m-0">
-                                <img class="w-100" src="{{ asset('images/icones/logo_footer.jpg') }}" alt="Logo footer Ludo et Sophie">                            
+                            <div class="col-6">
+                                <img class="w-100" src="{{ asset('images/icones/logo_footer.jpg')| imagine_filter('miniatures') }}" alt="Logo footer Ludo et Sophie">                            
                             </div>
-                            <address class="col-8 text-left m-0">
-                                Ludo &amp; Sophie SAS
-                                49 rue de Ponthieu
-                                75008 Paris               
+                            <address class="col-6 text-left p-0 m-0">
+                                <ul class="p-0 m-0 mt-3">
+                                    <li>Ludo &amp; Sophie SAS</li>
+                                    <li>49 rue de Ponthieu</li>
+                                    <li>75008 Paris</li>
+                                </ul>            
                             </address>             
                         </div>
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-md-9 mb-5">
                         {{ include('_formMessages.html.twig') }}
                     </div>
                 </div>
@@ -176,8 +192,8 @@
                 <ul>
                     {# Boucle sur liens footer #}
                     {% for link in links()|filter( link => link.position == 'footer' )|sort((a, b) => a.positionOrder <=> b.positionOrder) %}
-                            <li>
-                                <a
+                            <li class="text-center">
+                                <a class="text-decoration-none"
                                 href="{{ link.url }}" 
                                 title="{{ link.title }}" 
                                 target="{{ (link.type == "external") ? '_blank' : '_self' }}" >
@@ -189,10 +205,11 @@
                 </ul>
 
             
-                <p>Copyright &copy; 2016-2020 Ludo&amp;Sophie. Tous droits réservés.</p>
+                <p class="text-center text-primary">Copyright &copy; 2016-2020 Ludo&amp;Sophie. Tous droits réservés.</p>
             </div>
         
-        </footer>
+        </footer>    
+    </div>
 
 
 
