--- a/templates/home/allProducts.html.twig
+++ b/templates/home/allProducts.html.twig
@@ -5,22 +5,22 @@
 {% block body %}
 
 	{# Arborescence #}
-	<ul>
-		<li>
-			<a href="{{ path('home') }}" title="Ludo et Sophie : Acceuil">
+	<ol class="breadcrumb bg-white">
+		<li class="breadcrumb-item">
+			<a class="text-muted" href="{{ path('home') }}" title="Ludo et Sophie : Acceuil">
 				<i class="fa fa-home"></i>
 			</a>
 		</li>
-		<li>
-			<a href="{{ path('home_all_products') }}" title="Voir toutes les ***REMOVED***">
-				<h2>Toutes les ***REMOVED***</h2>
+		<li class="breadcrumb-item">
+			<a class="text-muted" href="{{ path('home_all_products') }}" title="Voir toutes les ***REMOVED***">
+				<p>Toutes les ***REMOVED***</p>
 			</a>
 		</li>
-	</ul>
+	</ol>
 	{# Fin Arborescence #}
 
 	{# Boutons grille/liste #}
-	<div class="row">
+	<div class="row d-none d-md-block">
         <div class="col-lg-12 my-3">
             <div class="pull-right">
                 <div class="btn-group">
@@ -48,22 +48,26 @@
 
 			{% for product in products %}
 
-				<article class="item col-xs-3 col-lg-3">
+				<article class="item col-xs-3 col-lg-3 my-3">
 					<div class="thumbnail card">
 						<div class="img-event p-3">
 							{# Illustration produit #}
 							{% if product.images is not empty %}
-								<img class="group list-group-image img-fluid w-100" src="{{ asset('images/products/' ~ product.images[0].name )| imagine_filter('miniatures') }}" alt="Immage d'illustration {{ product.title ?? '' }}">      
+								<a class="text-decoration-none" title="Aller à la page de {{ product.title }}" href="{{ path('home_product', { slugCategory: '/', slugProduct: product.slug}) }}">
+									<img class="group list-group-image img-fluid w-100" src="{{ asset('images/products/' ~ product.images[0].name )| imagine_filter('miniatures') }}" alt="Immage d'illustration {{ product.title ?? '' }}">     								
+								</a>  
 							{% endif %}    
 							{# Fin Illustration produit #}
 						</div>
 
-						<div class="caption card-body">
+						<div class="caption card-body pb-0">
 							{# Description produit #}
-							<h3 class="group card-title inner list-group-item-heading">
-								{{ product.title }}
-							</h3>
-							<p class="group inner list-group-item-text">
+							<a class="text-decoration-none" title="Aller à la page de {{ product.title }}" href="{{ path('home_product', { slugCategory: '/', slugProduct: product.slug}) }}">
+								<h3 class="group card-title inner list-group-item-heading font-weight-bold">
+									{{ product.title }}
+								</h3>
+							</a>  
+							<p class="group inner list-group-item-text text-secondary">
 								{{ product.description[:400]|striptags|raw }}{{ (product.description|length > 400)?'...':'' }}
 							</p>
 							<p>
@@ -84,6 +88,21 @@
 										<a class="btn" href="{{ product.weezeevent }}" title="Réserver sur weezevent.com" target="_blank" rel="noopener noreferrer">Réserver sur weezevent.com</a>
 									{% endif %}
 										<a class="text-decoration-none" title="Aller à la page de {{ product.title }}" href="{{ path('home_product', { slugCategory: '/', slugProduct: product.slug}) }}">En savoir plus...</a>    
+									{# Fin Liens vers produit #}
+								</div>
+							</div>
+
+
+
+							<div class="row p-0">
+								<div class="col-xs-12 col-md-6">
+									<p class="text-secondary">
+										{{ product.taxIncludedPrice }}&euro;
+									</p>									
+								</div>
+								<div class="col-xs-12 col-md-6 p-0">
+									{# Liens vers produit #}
+										<a class="text-decoration-none border-left border-top p-3 font-weight-bold float-right wantToKnowMore" title="Aller à la page de {{ product.title }}" href="{{ path('home_product', { slugCategory: '/', slugProduct: product.slug}) }}">En savoir plus...</a> 
 									{# Fin Liens vers produit #}
 								</div>
 							</div>
