--- a/templates/home/category.html.twig
+++ b/templates/home/category.html.twig
@@ -7,25 +7,25 @@
 {% block body %}
 
 	{# Arborescence des filtres catégories #}
-	<ul>
-		<li>
-			<a href="{{ path('home') }}" title="Ludo et Sophie : Acceuil">
+	<ol class="breadcrumb bg-white">
+		<li class="breadcrumb-item">
+			<a class="text-muted" href="{{ path('home') }}" title="Ludo et Sophie : Acceuil">
 				<i class="fa fa-home"></i>
 			</a>
 		</li>
 		{% for topCategoryTitlesAndSlug in topCategoryTitlesAndSlugs %}
-		<li>
-			<a href="{{ path('home_category', {slug:topCategoryTitlesAndSlug["categorySlug"]}) }}" title="{{ topCategoryTitlesAndSlug["categoryTitle"] ?? '' }}">
-				<h2>{{ topCategoryTitlesAndSlug["categoryTitle"] ?? '' }}</h2>
+		<li class="breadcrumb-item" {{ loop.last ? 'aria-current="page"' :'' }}>
+			<a class="text-muted" href="{{ path('home_category', {slug:topCategoryTitlesAndSlug["categorySlug"]}) }}" title="{{ topCategoryTitlesAndSlug["categoryTitle"] ?? '' }}">
+				<p>{{ topCategoryTitlesAndSlug["categoryTitle"] ?? '' }}</p>
 			</a>
 		</li>
 		{% endfor %}
 
-	</ul>
+	</ol>
 	{# Fin Arborescence des filtres catégories #}
 
 	{# Boutons grille/liste #}
-	<div class="row">
+	<div class="row d-none d-md-block">
         <div class="col-lg-12 my-3">
             <div class="pull-right">
                 <div class="btn-group">
@@ -43,20 +43,20 @@
 
 	{# Présentation catégorie #}
 	<article>
-		{# <h2>{{ category.title ?? '' }}</h2> #}
+		<h2 class="font-italic">{{ category.title ?? '' }}</h2>
 
 		{# Illustration de la catégorie #}
 		{% if category.images|length > 0 %}
 			<div>
 				{% for image in category.images %}
-					<img class="w-50" src="{{ asset('images/products/' ~ image.name ) }}" alt="Immage d'illustration {{ category.title ?? '' }}">
+					<img class="w-100" src="{{ asset('images/products/' ~ image.name ) }}" alt="Immage d'illustration {{ category.title ?? '' }}">
 				{% endfor %}
 			</div>
 		{% endif %}
 		{# Fin Illustration de la catégorie #}
 
 		{# Description catégorie #}
-		<div>
+		<div class="text-secondary">
 			{{ ( category.description ?? '')|raw }}
 		</div>
 		{# Fin Description catégorie #}
@@ -78,11 +78,11 @@
 
 			{# Filtre recherche par catégories #}
 			{% if subCategoryTitlesAndSlugs|length > 1 %}
-				<h2>Affiner votre recherche</h2>
+				<h3 class="text-dark">Affiner votre recherche</h3>
 				<ul>
 					{% for subCategoryTitleAndSlug in subCategoryTitlesAndSlugs|sort((a, b) => a.categoryTitle <=> b.categoryTitle) %}
 					<li>
-						<a href="{{ path('home_category', {slug: subCategoryTitleAndSlug.categorySlug }) }}">{{ subCategoryTitleAndSlug.categoryTitle }} ({{ subCategoryTitleAndSlug.nbrOfOccurences }})</a>
+						<a class="text-decoration-none" href="{{ path('home_category', {slug: subCategoryTitleAndSlug.categorySlug }) }}">{{ subCategoryTitleAndSlug.categoryTitle }} ({{ subCategoryTitleAndSlug.nbrOfOccurences }})</a>
 					</li>
 					{% endfor %}
 				</ul>
@@ -97,22 +97,30 @@
 
 			{# Boucle sur produits #}
 			{% for product in products %}
-				<article class="item col-xs-3 col-lg-3">
+				<article class="item col-xs-3 col-lg-3 my-3">
 					<div class="thumbnail card">
 						<div class="img-event p-3">
 							{# Illustration produit #}
 							{% if product.images is not empty %}
-								<img class="group list-group-image img-fluid w-100" src="{{ asset('images/products/' ~ product.images[0].name )| imagine_filter('miniatures') }}" alt="Immage d'illustration {{ product.title ?? '' }}">      
+								<a class="text-decoration-none" 
+									title="Aller à la page de {{ product.title }}" 
+									href="{{ path('home_product', { slugCategory: topCategoryTitlesAndSlugs|last.categorySlug, slugProduct: product.slug}) }}">
+										<img class="group list-group-image img-fluid w-100" src="{{ asset('images/products/' ~ product.images[0].name )| imagine_filter('miniatures') }}" alt="Immage d'illustration {{ product.title ?? '' }}">     
+								</a>  
 							{% endif %}    
 							{# Fin Illustration produit #}
 						</div>
 
-						<div class="caption card-body">
+						<div class="caption card-body pb-0">
 							{# Description produit #}
-							<h3 class="group card-title inner list-group-item-heading">
-								{{ product.title }}
-							</h3>
-							<p class="group inner list-group-item-text">
+
+							<a class="text-decoration-none" title="Aller à la page de {{ product.title }}" href="{{ path('home_product', { slugCategory: topCategoryTitlesAndSlugs|last.categorySlug, slugProduct: product.slug}) }}">
+								<h3 class="group card-title inner list-group-item-heading font-weight-bold">
+									{{ product.title }}
+								</h3>
+							</a>  
+
+							<p class="group inner list-group-item-text text-secondary">
 								{{ product.description[:400]|striptags|raw }}{{ (product.description|length > 400)?'...':'' }}
 							</p>
 							<p>
@@ -121,18 +129,17 @@
 								{% endfor %}						
 							</p>
 							{# Fin Description produit #}  
-							<div class="row">
+							<div class="row p-0">
 								<div class="col-xs-12 col-md-6">
-									<p class="lead">
+									<p class="text-secondary">
 										{{ product.taxIncludedPrice }}&euro;
-									</p>
+									</p>									
 								</div>
-								<div class="col-xs-12 col-md-6">
+
+								
+								<div class="col-xs-12 col-md-6 p-0">
 									{# Liens vers produit #}
-									{% if product.weezeevent is not empty %}
-										<a class="btn" href="{{ product.weezeevent }}" title="Réserver sur weezevent.com" target="_blank" rel="noopener noreferrer">Réserver sur weezevent.com</a>
-									{% endif %}
-										<a class="text-decoration-none" title="Aller à la page de {{ product.title }}" href="{{ path('home_product', { slugCategory: topCategoryTitlesAndSlugs|last.categorySlug, slugProduct: product.slug}) }}">En savoir plus...</a>    
+										<a class="text-decoration-none border-left border-top p-3 font-weight-bold float-right wantToKnowMore" title="Aller à la page de {{ product.title }}" href="{{ path('home_product', { slugCategory: topCategoryTitlesAndSlugs|last.categorySlug, slugProduct: product.slug}) }}">En savoir plus...</a> 
 									{# Fin Liens vers produit #}
 								</div>
 							</div>
