--- a/templates/home/page.html.twig
+++ b/templates/home/page.html.twig
@@ -4,11 +4,16 @@
 {% endblock %}
 
 {% block body %}
-    <article>
-        <h2>{{ page.title ?? '' }}</h2>
-        <div>
-            {{ ( page.content ?? '')|raw }}
+<article>
+    <h2>{{ page.title ?? '' }}</h2>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                {{ ( page.content ?? '')|raw }}            
+            </div>
         </div>
-    </article>
+
+    </div>
+</article>
 {% endblock %}
 
